--- a/index.html
+++ b/index.html
@@ -212,14 +212,16 @@ button {
   color: #4caf50;
   margin: 6px 0;
   font-weight: bold;
-  .price-row {
+}
+
+.price-row {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
   margin: 8px 0;
   flex-wrap: wrap;
-  }
+}
 
 .old-price {
   font-size: 14px;
@@ -270,10 +272,12 @@ button {
   <span class="save-text">Save 45%</span>
     </div>
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button type="button" onclick="alert('Button clicked')">
+  <button type="button" onclick="payNow(599)">
   Buy Now (5% OFF)
 </button>
-<button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
+
+<button class="cod-btn"
+onclick="orderCOD('Car Wheel Spinning 360° Luxury Mens Watch', 599)">
   Cash on Delivery
 </button>
     <div class="discount-note">
@@ -297,10 +301,12 @@ button {
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button type="button" onclick="payNow(599)">Buy Now (5% OFF)</button>
+  <button type="button" onclick="payNow(599)">
   Buy Now (5% OFF)
-  </button>
-    <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
+</button>
+
+<button class="cod-btn"
+onclick="orderCOD('Premium Luxury Watch', 599)">
   Cash on Delivery
 </button>
     <div class="discount-note">
@@ -324,7 +330,7 @@ button {
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
-    <button type="button" onclick="payNow(599)">Buy Now (5% OFF)</button>
+    <button type="button" onclick="payNow(399)">Buy Now (5% OFF)</button>
     <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 399)">
   Cash on Delivery
 </button>
@@ -351,8 +357,8 @@ button {
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button type="button" onclick="payNow(599)">Buy Now (5% OFF)</button>
-  <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 3599)">
+  <button type="button" onclick="payNow(399)">Buy Now (5% OFF)</button>
+  <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 399)">
   Cash on Delivery
 </button>
       <div class="discount-note">
@@ -370,14 +376,14 @@ button {
     <img src="image-50.png" alt="Classic Black Watch">
     <h3>Stainless Steel Analog Watch</h3>
     <div class="price-row">
-  <del class="old-price">₹13,499</del>
-  <span class="new-price">₹3,599</span>
-  <span class="save-text">Save 73%</span>
+  <del class="old-price">₹1100</del>
+  <span class="new-price">₹599</span>
+  <span class="save-text">Save 45%</span>
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
   <button type="button" onclick="payNow(599)">Buy Now (5% OFF)</button>
-    <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 3599)">
+    <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
   Cash on Delivery
 </button>
     <div class="discount-note">
@@ -395,7 +401,6 @@ button {
 </div>
 <script>
 function payNow(price) {
-
   var discount = price * 0.05;
   var finalPrice = Math.round(price - discount);
 
@@ -405,40 +410,26 @@ function payNow(price) {
     currency: "INR",
     name: "Drish Quality Products",
     description: "Online Payment (5% OFF)",
-
     handler: function (response) {
       alert(
-        "Payment Successful\n" +
+        "Payment Successful!\n\n" +
         "Paid: ₹" + finalPrice + "\n" +
         "Payment ID: " + response.razorpay_payment_id
       );
     },
-
-    modal: {
-      ondismiss: function () {
-        console.log("Checkout closed");
-      }
-    },
-
-    theme: {
-      color: "#e50914"
-    }
+    theme: { color: "#e50914" }
   };
 
   var rzp = new Razorpay(options);
-
-  rzp.on('payment.failed', function (response) {
-    alert("Payment Failed\n" + response.error.description);
-  });
-
   rzp.open();
 }
+
 function orderCOD(product, price) {
   var phone = "919518671644";
 
   var message =
     "Hello Drish Quality Products\n\n" +
-    "🛒 Cash on Delivery Order\n" +
+    "🛒 Cash on Delivery Order\n\n" +
     "📦 Product: " + product + "\n" +
     "💰 Price: ₹" + price + "\n\n" +
     "Please confirm availability.";
