--- a/index.html
+++ b/index.html
@@ -400,64 +400,16 @@ onclick="orderCOD('Premium Luxury Watch', 599)">
   </div>
 </div>
 <script>
-async function payNow(price) {
-  try {
-    // 5% discount
-    const finalPrice = Math.round(price * 0.95);
-
-    const res = await fetch(
-      "https://drish-backend.onrender.com/create-order",
-      {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ amount: finalPrice })
-      }
-    );
-
-    const order = await res.json();
-
-    const options = {
-      key: "rzp_test_RsL5qIacpAAeJ",
-      amount: order.amount,
-      currency: "INR",
-      name: "Drish Quality Products",
-      description: "Online Payment (5% OFF)",
-      order_id: order.id,
-      handler: function (response) {
-        alert(
-          "Payment Successful!\n\n" +
-          "Paid: ₹" + finalPrice + "\n" +
-          "Payment ID: " + response.razorpay_payment_id
-        );
-      },
-      theme: { color: "#e50914" }
-    };
-
-    const rzp = new Razorpay(options);
-    rzp.open();
-
-  } catch (err) {
-    alert("Payment error. Please try again.");
-    console.error(err);
-  }
+function payNow(price) {
+  alert("Buy Now clicked\nPrice: ₹" + price);
+}
 
 function orderCOD(product, price) {
-  var phone = "919518671644";
-
-  var message =
-    "Hello Drish Quality Products\n\n" +
-    "🛒 Cash on Delivery Order\n\n" +
-    "📦 Product: " + product + "\n" +
-    "💰 Price: ₹" + price + "\n\n" +
-    "Please confirm availability.";
-
-  var url =
-    "https://wa.me/" +
-    phone +
-    "?text=" +
-    encodeURIComponent(message);
-
-  window.open(url, "_blank");
+  alert(
+    "COD clicked\n" +
+    "Product: " + product + "\n" +
+    "Price: ₹" + price
+  );
 }
 </script>
   <footer class="site-footer">
